# aralex

./: .gitignore  ALJADWAL_EXTRACTION_SUCCESS.md  DATA_FLOW_DOCUMENTATION.md  DIGITALOCEAN_DEPLOYMENT_GUIDE.md  Dockerfile  EXTRACTION_STATUS_HONEST_ASSESSMENT.md  GRAMMAR_DISPLAY_COMPLETE.md  GRAMMAR_FEATURES_IMPLEMENTATION.md  GRAMMAR_IMPLEMENTATION_STATUS.md  GRAMMAR_UI_DESIGN_RESEARCH.md  IRAB_GAP_RESEARCH.md  IRAB_IMPLEMENTATION.md  IRAB_OPTIONS_EVALUATION.md  README.md  TESTING_GUIDE.md  VERSE_2_2_ALJADWAL_EXTRACTED.md  VERSE_2_2_ARABIC_IRAB.md  VERSE_2_2_COMPLETE_ANALYSIS.md  VERSE_2_2_FROM_TXT_FILES.md  deploy-digitalocean.sh  normalize_verses.sql
.claude/: settings.local.json
backend/: .ghci  .ghcid  .gitignore  GHC_UPGRADE.md  PHASE2_COMPLETE.md  QURAN_METADATA_COMPLETE.md  README.md  TEXT_HANDLING_STANDARD.md  aralex-backend.cabal  cabal.project  cleanup_database.py  deduplicate_mufradat.py  generate_quran_metadata.py  merge_shamela_mufradat.py  null_definitions_report.txt  quran_metadata_generated.hs  test_metadata.sh  test_parser.hs
backend/app/: Main.hs  TestMetadata.hs
backend/codegen/: CodeGen.hs
backend/src/: Bridge.hs
backend/src/API/: EtymologyGraph.hs  Handlers.hs  Routes.hs
backend/src/Database/: Instances.hs  Loader.hs  Schema.hs
backend/src/Domain/: Dictionary.hs  EtymologyGraph.hs  Irab.hs  Morphology.hs  MorphologyDTO.hs  Phonosemantics.hs  Verse.hs
backend/src/Parser/: Dictionary.hs  LetterMeanings.hs  Morphology.hs  QuranMetadata.hs  Verse.hs
backend/test/: Spec.hs
data/arabic_dicts/: mofradat_entries_20251016_024800.json
data/quran_text/: quran-simple-min.txt  quran-simple-min.xml  quran-simple.txt  quran-simple.xml  quran-uthmani-min.txt
frontend/: .gitignore  DESIGN_DECISIONS.md  PHASE4B_COMPLETE.md  PHASE4B_FINAL_SUMMARY.md  PHASE4B_TODO.md  build.sh  dev.sh  index.js  package-lock.json  package.json  public.0ba7c674.js  public.2ddf4966.js  public.c3cb5631.js  spago.yaml  spago.yaml.backup
frontend/public/: index.html
frontend/src/: Main.purs  Main.purs.bak  Util.Clipboard.js  Util.Clipboard.purs
frontend/src/Component/: EtymologyGraph.purs  EtymologyGraphSimple.purs
frontend/src/Util/: Arabic.purs  Grammar.purs  RootMatching.purs  Time.purs
research/: CORPUS_DATA_ACTION_PLAN.md  MISSING_CORPUS_DATA_ACQUISITION.md  MORPHOLOGY_ABBREVIATIONS_REFERENCE.md  MORPHOLOGY_FILE_FEATURES_ANALYSIS.md  MORPHOLOGY_LINE_EXAMPLES_DECODED.md  QURANIC_CORPUS_WEBSITE_RESEARCH.md
scripts/: extract_aljadwal.py  fix_vocative_irab.py  generate_all_irab.py  generate_complete_irab.py  generate_irab_from_morphology.py  generate_segment_irab.py  migrate_irab_for_segments.sql
