cabal-version:      3.0
name:               aralex-backend
version:            0.1.0.0
synopsis:           Quranic Phonosemantic Analysis System - Backend API
description:
    Haskell backend for analyzing Arabic words through letter-level phonosemantics.
    Combines 7 classical dictionaries (40,645 entries) with Quranic morphology corpus.
license:            MIT
author:             Ali Al-Qatari
maintainer:         alqatari@example.com
category:           Web, NLP, Arabic
build-type:         Simple
extra-doc-files:    README.md

common warnings
    ghc-options: -Wall
                 -Wcompat
                 -Widentities
                 -Wincomplete-uni-patterns
                 -Wincomplete-record-updates
                 -Wredundant-constraints
                 -Wnoncanonical-monad-instances
                 -Wmissing-export-lists
                 -Wpartial-fields

library
    import:           warnings
    exposed-modules:
        Data.QuranMetadata
        Domain.Dictionary
        Domain.Morphology
        Domain.MorphologyDTO
        Domain.Verse
        Domain.Phonosemantics
        Domain.EtymologyGraph
        Domain.Irab
        Parser.Dictionary
        Parser.Morphology
        Parser.Verse
        Parser.QuranMetadata
        Parser.LetterMeanings
        Database.Schema
        Database.Instances
        Database.Loader
        API.Routes
        API.Handlers
        API.EtymologyGraph
        Bridge
    build-depends:
        base                 >=4.21 && <5,
        text                 >=2.0 && <3,
        bytestring           >=0.11 && <0.13,
        aeson                >=2.0 && <3,
        attoparsec           >=0.14 && <0.15,
        servant              >=0.19 && <0.21,
        servant-server       >=0.19 && <0.21,
        wai-app-static       >=3.1 && <3.2,
        sqlite-simple        >=0.4 && <0.5,
        direct-sqlite        >=2.3 && <3,
        time                 >=1.12 && <2,
        containers           >=0.6 && <0.8,
        vector               >=0.12 && <0.14,
        unordered-containers >=0.2 && <0.3,
        purescript-bridge    >=0.15 && <0.16,
        mtl                  >=2.2 && <3,
        transformers         >=0.5 && <0.7,
        filepath             >=1.4 && <2,
        directory            >=1.3 && <2,
        xml                  >=1.3 && <2
    hs-source-dirs:   src
    default-language: Haskell2010
    default-extensions:
        OverloadedStrings
        DeriveGeneric
        DeriveAnyClass
        GADTs
        DataKinds
        TypeFamilies
        TypeOperators
        KindSignatures
        FlexibleContexts
        FlexibleInstances
        ScopedTypeVariables
        MultiParamTypeClasses
        GeneralizedNewtypeDeriving
        StandaloneDeriving
        RecordWildCards
        LambdaCase
        NamedFieldPuns

executable aralex-backend
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base >=4.21 && <5,
        text >=2.0 && <3,
        aralex-backend,
        servant-server,
        warp >=3.3 && <4,
        wai >=3.2 && <4,
        wai-app-static >=3.1 && <3.2,
        wai-cors >=0.2 && <0.3,
        wai-extra >=3.1 && <4,
        directory >=1.3 && <2
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N

executable aralex-codegen
    import:           warnings
    main-is:          CodeGen.hs
    build-depends:
        base >=4.21 && <5,
        aralex-backend,
        purescript-bridge,
        filepath
    hs-source-dirs:   codegen
    default-language: Haskell2010
    ghc-options:      -threaded

executable test-metadata
    import:           warnings
    main-is:          TestMetadata.hs
    build-depends:
        base >=4.21 && <5,
        aralex-backend
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -threaded

test-suite aralex-backend-test
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Spec.hs
    build-depends:
        base >=4.21 && <5,
        aralex-backend,
        hspec >=2.10 && <3,
        QuickCheck >=2.14 && <3
